# Skyscrapers

./: CMakeLists.txt
SkyscapersTest/: CMakeLists.txt  main.cpp  test_skyscraper_partial_provider.h  test_skyscraper_provider.h  testdataprovider.h  tst_backtrackingtest.h  tst_codewarsbacktrackingtest.h  tst_permutationtest.h  tst_skyscraperstest.h
SkyscapersTest/backtracking/: tst_backtracking_partialtest.h  tst_backtrackingtest.h
SkyscapersTest/hybrid/: tst_hybridtest.h
SkyscapersTest/permutation/: tst_permutation_partialtest.h  tst_permutationtest.h
Skyscrapers/: CMakeLists.txt  backtracking.cpp  backtracking.h  codewarsbacktracking.cpp  codewarsbacktracking.h  codewarspermutation.cpp  codewarspermutation.h  hybrid.cpp  hybrid.h  main.cpp  permutation.cpp  permutation.h  skyscrapers.cpp  skyscrapers.h
Skyscrapers/backtracking/: algorithm.cpp  algorithm.h  board.cpp  board.h  borderiterator.cpp  borderiterator.h  cluehints.cpp  cluehints.h  field.cpp  field.h  nopes.cpp  nopes.h  point.h  readdirection.cpp  readdirection.h  row.cpp  row.h  rowdata.cpp  rowdata.h
Skyscrapers/permutation/: board.cpp  board.h  borderiterator.cpp  borderiterator.h  cluehints.cpp  cluehints.h  cluepair.cpp  cluepair.h  field.cpp  field.h  fieldelements.h  nopes.cpp  nopes.h  permutations.cpp  permutations.h  point.h  readdirection.cpp  readdirection.h  row.cpp  row.h  slice.cpp  slice.h  span.h
Skyscrapers/shared/: board.cpp  board.h  borderiterator.cpp  borderiterator.h  cluehints.cpp  cluehints.h  field.cpp  field.h  missingnumberinsequence.h  nopes.cpp  nopes.h  point.h  readdirection.cpp  readdirection.h  row.cpp  row.h  rowclues.cpp  rowclues.h
